--- a/p02-wasm/Cargo.toml
+++ b/p02-wasm/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "p02-wasm"
+name = "LxL-2010405-WASM"
 version = "0.1.0"
-authors = ["Paweł Kraszewski <p.kraszewski.dbti@abw.gov.pl>"]
+authors = ["Paweł Kraszewski <pawel@kraszewscy.net>"]
 edition = "2018"
 
 [dependencies]
