--- a/p02-wasm/Cargo.toml
+++ b/p02-wasm/Cargo.toml
@@ -1,7 +1,21 @@
 [package]
-name = "LxL-2010405-WASM"
+name = "LxL_20190405_WASM"
 version = "0.1.0"
 authors = ["Paweł Kraszewski <pawel@kraszewscy.net>"]
 edition = "2018"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
+wasm-bindgen = "^0.2"
+
+[dependencies.web-sys]
+version = "^0.3"
+features = [
+  'Document',
+  'Element',
+  'HtmlElement',
+  'Node',
+  'Window',
+]
