--- a/p02-wasm/Cargo.toml
+++ b/p02-wasm/Cargo.toml
@@ -7,8 +7,17 @@ edition = "2018"
 [lib]
 crate-type = ["cdylib", "rlib"]
 
+[[bin]]
+name = "webserwer"
+path = "src/serwer/main.rs"
+
 [dependencies]
 wasm-bindgen = "^0.2"
+iron = "^0.6"
+staticfile = "^0.5"
+mount = "^0.4"
+router = "^0.6"
+time = "^0.1"
 
 [dependencies.web-sys]
 version = "^0.3"
