--- a/p02-wasm/Cargo.toml
+++ b/p02-wasm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "LxL_20190405_WASM"
-version = "0.1.0"
+name = "linuxlab-20190405-wasm"
+version = "1.0.0"
 authors = ["Paweł Kraszewski <pawel@kraszewscy.net>"]
 edition = "2018"
 
@@ -17,6 +17,7 @@ iron = "^0.6"
 staticfile = "^0.5"
 mount = "^0.4"
 router = "^0.6"
+mime = "^0.3"
 time = "^0.1"
 
 [dependencies.web-sys]
